--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,5 @@ tui = "0.14.0"
 unicode-width = "0.1"
 termion = "1.5"
 rand = "0.7"
-mysql_async = "0.27.0"
+sqlx = { version = "0.5.1", features = [ "runtime-tokio-rustls", "macros", "any", "mysql", "time" ] }
 tokio = { version = "1", features = ["full"] }
